Fixed test case failures
Signed-off-by: kameshsr <kameshsr1338@gmail.com>