@@ -206,10 +206,16 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.plugin.version}</version>
                 <configuration>
-                    <skipTests>${skipTests}</skipTests>
+                    <skipTests>false</skipTests>
                     <skip>false</skip>
+                    <!--suppress UnresolvedMavenProperty -->
                     <argLine>
-                        ${argLine} --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED --illegal-access=permit
+                        ${argLine}
+                        --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --illegal-access=debug
+                        --enable-preview
+                        --add-opens java.base/java.io=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
